--- a/src/app/base-client/hersheys-client/hersheys-client.component.html
+++ b/src/app/base-client/hersheys-client/hersheys-client.component.html
@@ -4,4 +4,4 @@
 <p>Hershey's Filter 3</p>
 <p>Hershey's Filter 4</p>
 
-<button (click)="baseEvent()">Child Button</button>
+<button (click)="baseEvent()">Hersheys Button</button>
