3 files modified, 1 added, 1 deleted

--- a/src/app/base-client/base-client.component.html
+++ b/src/app/base-client/base-client.component.html
@@ -270,10 +270,7 @@
                           <input
                             type="checkbox"
                             (change)="
-                              onChangeChecboxSection(
-                                'salesDirector',
-                                $event.target.checked
-                              )
+                              onChangeChecboxSection('salesDirector', true)
                             "
                             [checked]="filtersCount.SalesDirector > 0"
                           />
@@ -314,10 +311,7 @@
                           <input
                             type="checkbox"
                             (change)="
-                              onChangeChecboxSection(
-                                'dsmBrokerManager',
-                                $event.target.checked
-                              )
+                              onChangeChecboxSection('dsmBrokerManager', true)
                             "
                             [checked]="filtersCount.DsmBrokerManager > 0"
                           />
@@ -358,10 +352,7 @@
                           <input
                             type="checkbox"
                             (change)="
-                              onChangeChecboxSection(
-                                'cdmAccountManager',
-                                $event.target.checked
-                              )
+                              onChangeChecboxSection('cdmAccountManager', true)
                             "
                             [checked]="filtersCount.CdmAccountManager > 0"
                           />
@@ -402,10 +393,7 @@
                           <input
                             type="checkbox"
                             (change)="
-                              onChangeChecboxSection(
-                                'mwcParentChainName',
-                                $event.target.checked
-                              )
+                              onChangeChecboxSection('mwcParentChainName', true)
                             "
                             [checked]="filtersCount.MwcParentChainName > 0"
                           />
@@ -446,10 +434,7 @@
                           <input
                             type="checkbox"
                             (change)="
-                              onChangeChecboxSection(
-                                'mwcDivChainName',
-                                $event.target.checked
-                              )
+                              onChangeChecboxSection('mwcDivChainName', true)
                             "
                             [checked]="filtersCount.MwcDivChainName > 0"
                           />
@@ -508,10 +493,7 @@
                           <input
                             type="checkbox"
                             (change)="
-                              onChangeChecboxSection(
-                                'retailArea',
-                                $event.target.checked
-                              )
+                              onChangeChecboxSection('retailArea', true)
                             "
                             [checked]="filtersCount.RetailArea > 0"
                           />
@@ -551,10 +533,7 @@
                           <input
                             type="checkbox"
                             (change)="
-                              onChangeChecboxSection(
-                                'retailSalesRep',
-                                $event.target.checked
-                              )
+                              onChangeChecboxSection('retailSalesRep', true)
                             "
                             [checked]="filtersCount.RetailSalesRep > 0"
                           />
@@ -594,10 +573,7 @@
                           <input
                             type="checkbox"
                             (change)="
-                              onChangeChecboxSection(
-                                'keyAccount',
-                                $event.target.checked
-                              )
+                              onChangeChecboxSection('keyAccount', true)
                             "
                             [checked]="filtersCount.KeyAccount > 0"
                           />
@@ -654,12 +630,7 @@
                         <div class="col-2 m-0 pt-1 pr-1 text-end">
                           <input
                             type="checkbox"
-                            (change)="
-                              onChangeChecboxSection(
-                                'distArea',
-                                $event.target.checked
-                              )
-                            "
+                            (change)="onChangeChecboxSection('distArea', true)"
                             [checked]="filtersCount.distArea > 0"
                           />
                         </div>
@@ -698,10 +669,7 @@
                           <input
                             type="checkbox"
                             (change)="
-                              onChangeChecboxSection(
-                                'distSalesRep',
-                                $event.target.checked
-                              )
+                              onChangeChecboxSection('distSalesRep', true)
                             "
                             [checked]="filtersCount.DistSalesRep > 0"
                           />
@@ -741,10 +709,7 @@
                           <input
                             type="checkbox"
                             (change)="
-                              onChangeChecboxSection(
-                                'distributor',
-                                $event.target.checked
-                              )
+                              onChangeChecboxSection('distributor', true)
                             "
                             [checked]="filtersCount.Distributor > 0"
                           />
@@ -801,12 +766,7 @@
                       <div class="col-2 m-0 pt-1 pr-1 text-end">
                         <input
                           type="checkbox"
-                          (change)="
-                            onChangeChecboxSection(
-                              'enrolledBy',
-                              $event.target.checked
-                            )
-                          "
+                          (change)="onChangeChecboxSection('enrolledBy', true)"
                           [checked]="filtersCount.EnrolledBy > 0"
                         />
                       </div>
@@ -843,12 +803,7 @@
                       <div class="col-2 m-0 pt-1 pr-1 text-end">
                         <input
                           type="checkbox"
-                          (change)="
-                            onChangeChecboxSection(
-                              'storeType',
-                              $event.target.checked
-                            )
-                          "
+                          (change)="onChangeChecboxSection('storeType', true)"
                           [checked]="filtersCount.StoreType > 0"
                         />
                       </div>
@@ -888,12 +843,7 @@
                       <div class="col-2 m-0 pt-1 pr-1 text-end">
                         <input
                           type="checkbox"
-                          (change)="
-                            onChangeChecboxSection(
-                              'chain',
-                              $event.target.checked
-                            )
-                          "
+                          (change)="onChangeChecboxSection('chain', true)"
                           [checked]="filtersCount.Chain > 0"
                         />
                       </div>
@@ -932,10 +882,7 @@
                           <input
                             type="checkbox"
                             (change)="
-                              onChangeChecboxSection(
-                                'distributor',
-                                $event.target.checked
-                              )
+                              onChangeChecboxSection('distributor', true)
                             "
                             [checked]="filtersCount.Distributor > 0"
                           />
